--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,18 @@ logging.level.ru.practicum.shareit: TRACE
 #spring.datasource.url
 #spring.datasource.username
 #spring.datasource.password
+
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+
+#spring.datasource.url=jdbc:postgresql://wallet-postgres:5432/walletdb
+
+
+spring.datasource.username=user
+spring.datasource.password=12345
+spring.datasource.driverClassName=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
