--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-logging.level.org.springframework.web.client.RestTemplate=DEBUG
+logging.level.org.springframework.web.client.RestTemplate=trace
+logging.level.org.springframework.web=trace
 
 server.port=8080
 
