--- a/server/src/test/resources/application.properties
+++ b/server/src/test/resources/application.properties
@@ -1,1 +1,8 @@
-spring.sql.init.mode=never
+#spring.sql.init.mode=never
+
+spring.sql.init.mode=always
+spring.datasource.url=jdbc:h2:mem:shareit
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.sql.init.schema-locations=classpath:test-schema.sql
